@@ -12,6 +12,7 @@
   * Added XML::DTD#external_id
   * Added XML::DTD#system_id
   * Added XML::ElementContent for DTD Element content validity
+  * Better namespace declaration support in Nokogiri::XML::Builder
 
 * Bugfixes
 
